tests/spec/pass/log_module_new.aja
import (
    "modules/log"
)

print(log.line("INFO", "ok"))
