tests/spec/fail/rand_int_invalid_range.aja
import (
    "rand"
)

print(rand.int(5, 1))
